src/objects/Google_Identity_Platform__c.object
<CustomObject>
    <description>Google Sign-In is a secure authentication system that reduces the burden of login for your users, by enabling them to sign in with their Google account—the same account they already use with Gmail, Play, Google+, and other Google services.</description>
    <fields>
        <fullName>Claim_Set_ISS__c</fullName>
        <description>E-mail address of the Service Account.</description>
        <inlineHelpText>Enter the e-mail address of the Service Account.</inlineHelpText>
        <label>Claim Set &quot;iss:&quot;</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Set_Scope__c</fullName>
        <description>A space-delimited list of the permissions that the application requests.</description>
        <inlineHelpText>Enter the list of permissions being requested</inlineHelpText>
        <label>Claim Set &quot;scope:&quot;</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Set_aud__c</fullName>
        <description>A descriptor of the intended target of the assertion. When making an access token request this value is always https://www.googleapis.com/oauth2/v4/token.</description>
        <inlineHelpText>Enter a descriptor of the intended target.</inlineHelpText>
        <label>Claim Set &quot;aud:&quot;</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Set_exp__c</fullName>
        <description>The expiration time of the assertion, specified as seconds since 00:00:00 UTC, January 1, 1970. This value has a maximum of 1 hour after the issued time.</description>
        <inlineHelpText>Enter the expiration time of the assertion, specified as seconds since 00:00:00 UTC, January 1, 1970. This value has a maximum of 1 hour after the issued time.</inlineHelpText>
        <label>Claim Set &quot;exp:&quot;</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Set_iat__c</fullName>
        <description>The time the assertion was issued, specified as seconds since 00:00:00 UTC, January 1, 1970.</description>
        <inlineHelpText>Enter the time the assertion was issued, specified as seconds since 00:00:00 UTC, January 1, 1970.</inlineHelpText>
        <label>Claim Set &quot;iat:&quot;</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_End_Point__c</fullName>
        <description>The URL of the Google authentication service</description>
        <inlineHelpText>Enter the URL for the Google authentication service.</inlineHelpText>
        <label>HTTP End Point</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTP_Header__c</fullName>
        <description>The Content-Type entity header is used to indicate the media type of the resource.</description>
        <inlineHelpText>Enter the Header Content-Type.</inlineHelpText>
        <label>HTTP Header Content-Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>application/json</fullName>
                </value>
                <value>
                    <fullName>application/xml</fullName>
                </value>
                <value>
                    <fullName>application/x-www-form-urlencoded</fullName>
                    <default>true</default>
                    <label>application/x-www-form-urlencoded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <description>HTTP defines a set of request methods to indicate the desired action to be performed for a given resource.</description>
        <inlineHelpText>Enter the HTTP request method.</inlineHelpText>
        <label>HTTP Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                    <default>true</default>
                    <label>POST</label>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Format__c</fullName>
        <description>Google Identity Platform service accounts rely on the RSA SHA-256 algorithm and the JWT token format. This field describes the JSON representation of the header.</description>
        <inlineHelpText>Enter the JSON representation of the JWT header format.</inlineHelpText>
        <label>Header Format</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Private_Key__c</fullName>
        <label>Signature Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Google Identity Platform</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Google Identity Platform</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Identity Platform</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>